@@ -1,6 +1,9 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.3.0
 
+  *) mod_proxy: enable Ignore Errors option on ProxyPass Status.
+     PR 43167 [Francisco Gimeno <kikov kikov.org>
+
   *) mod_proxy_http: Don't try to read body of a HEAD request before
      responding.
      PR 41644 [Stuart Children <stuart terminus.co.uk>]
